Tue Apr 19 01:00:21 2011  Tajima Akio <artonx@yahoo.co.jp>

	* test/ruby/test_io.rb (TestIO#test_cross_thread_close_fd):
	  skip cross thread pipe close if windows

Mon Apr 18 12:15:46 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_range.rb (TestRange#test_step_ruby_core_35753):
	  avoid float error. [ruby-core:35804]

Sun Apr 17 00:20:14 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_{core,strftime}.c: use struct tmx instead of vtm.
	* ext/date/date_tmx.h: new.

Sat Apr 16 22:23:52 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strftime.c (date_strftime_wo_timespec): changed
	  the way of validation of locale modifiers.

Sat Apr 16 21:55:12 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: replacement of implementation of
	  _strptime.  [experimental]
	* ext/date/date_strptime.c: new.
	* ext/date/lib/date/format.rb: removed ruby version of _strptime.

Sat Apr 16 10:18:30 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* vm.c (Init_VM): suppress warning: "OPT_BASIC_OPERATIONS" is not
	  defined.

Fri Apr 15 23:41:18 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ruby.c (proc_options): suppress warning:
	  "ALLOW_DEFAULT_SOURCE_ENCODING" is not defined.

Fri Apr 15 15:10:29 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/generic.rb (#route_from_path): Fix a bug where
	  URI('http://h/b/').route_to('http://h/b') wrongly returned './'
	  (should be '../b'). [Bug #4476]

Fri Apr 15 14:58:06 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#touch): Fix corrupted output when
	  mtime is specified in addition to nocreate (and verbose).
	  ref [ruby-dev:43401]

Thu Apr 14 23:43:43 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (ruby_float_step): wrong loop condition.
	  fixes [ruby-core:35753], reported by Joey Zhou.

	* test/ruby/test_range.rb (TestRange#test_step_ruby_core_35753):
	  test above change.

Thu Apr 14 22:48:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
