@@ -1,3 +1,7 @@
+Wed Apr 20 00:02:13 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* misc/ruby-mode.el (ruby-parse-partial): use position of open paren.
+
 Tue Apr 19 01:00:21 2011  Tajima Akio <artonx@yahoo.co.jp>
 
 	* test/ruby/test_io.rb (TestIO#test_cross_thread_close_fd):
